change ui with Radzen component

--- a/Atlas.Reporting.UI/Client/_Imports.razor
+++ b/Atlas.Reporting.UI/Client/_Imports.razor
@@ -8,9 +8,6 @@
 @using Microsoft.JSInterop
 @using Atlas.Reporting.UI.Client
 @using Atlas.Reporting.UI.Client.Shared
-@using PSC.Blazor.Components.DataTable
 @using Atlas.Reporting.DAL.Services
-@using Syncfusion.Blazor.Buttons
-@using Syncfusion.Blazor.Calendars
-@using Syncfusion.Blazor.Grids
-@using Syncfusion.Blazor.Data
+@using Radzen
+@using Radzen.Blazor;
