--- a/Atlas.Reporting.UI/Client/Pages/FetchData.razor
+++ b/Atlas.Reporting.UI/Client/Pages/FetchData.razor
@@ -18,7 +18,7 @@
 
 <div class="form-group">
     <label for="endDatePicker">end Date:</label>
-    <RadzenDatePicker TValue="DateTime?" @bind-Value="@endDate" Change="(args => endDate =  args)"/>
+    <RadzenDatePicker TValue="DateTime?" @bind-Value="@endDate" Change="@(args => endDate =  args)"/>
 </div>
 
 <div class="form-group">
