--- a/Atlas.Reporting.UI/Client/Pages/FetchData.razor
+++ b/Atlas.Reporting.UI/Client/Pages/FetchData.razor
@@ -24,12 +24,6 @@
 <div class="form-group">
     <RadzenCheckBox @bind-Value=@snappIsActive Name="snappIsActive"/>
     <RadzenLabel Text="Snapp Is Active:" Component="CheckBox1" Style="margin-left: 8px; vertical-align: middle;"/>
-
-</div>
-
-<div class="form-group">
-    <RadzenCheckBox @bind-Value=@isActive Name="isActive"/>
-    <RadzenLabel Text="IsActive:" Component="CheckBox1" Style="margin-left: 8px; vertical-align: middle;"/>
 </div>
 
 <div class="form-group">
@@ -53,28 +47,27 @@
             <RadzenDataGridColumn TItem="ReportDto" Property="SnappFood" Title="SnappFood"/>
             <RadzenDataGridColumn TItem="ReportDto" Property="Salon" Title="Salon"/>
             <RadzenDataGridColumn TItem="ReportDto" Property="SnappIsActive" Title="SnappIsActive"/>
-            <RadzenDataGridColumn TItem="ReportDto" Property="IsActive" Title="IsActive"/>
         </Columns>
     </RadzenDataGrid>
 }
 
 @code {
     DataGridGridLines GridLines = DataGridGridLines.Default;
-    private string vendorCode = "";
+    private string? vendorCode;
     private DateTime? startDate = DateTime.Now;
     private DateTime? endDate = DateTime.Now;
     private bool snappIsActive;
-    private bool isActive = true;
-    private string brandId = "";
-
+    private string? brandId;
     private List<ReportDto> ReportDTos;
-    private string filter;
 
     private async Task ViewReport()
     {
         try
         {
-            var response = await HttpClient.GetAsync($"/api/Rport?vendorCode={vendorCode}&startDate={startDate}&endDate={endDate}&snappIsActive={snappIsActive}&brandId={brandId}");
+            int bId;
+            var isConverted = int.TryParse(brandId,out bId);
+            int? id = isConverted ? bId : null;
+            var response = await HttpClient.GetAsync($"/api/Rport?vendorCode={vendorCode}&startDate={startDate}&endDate={endDate}&snappIsActive={snappIsActive}&brandId={id}");
             if (response.IsSuccessStatusCode)
             {
                 var reportDtoList = await response.Content.ReadFromJsonAsync<List<ReportDto>>();
