--- a/Atlas.Reporting.UI/Client/Pages/FetchData.razor
+++ b/Atlas.Reporting.UI/Client/Pages/FetchData.razor
@@ -92,7 +92,7 @@
             }
             else
             {
-
+                  throw new Exception(ex.Message);
             }
         }
         catch (Exception ex)
